@@ -3,6 +3,7 @@ Revision history for Socialtext-Utils
 0.08
   - Add edit_last_page(), which opens the most recently
     edited page tagged with the given tag.
+  - Add --template switch to edit new pages from a template
 
 0.07 - Thu Jan 25 11:20:12 PST 2007
   - Include DefaultRester.pm in the MANIFEST and a unit test
